[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nox_tools"
description = "Predefined sessions for nox"
version = "0.2.0"
authors = [{name = "Ali Ghahraei Figueroa", email = "aligf94@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Unix",
]
dependencies = [
    "nox",
]

[project.urls]
Home = "https://github.com/AliGhahraei/nox-tools"
